@@ -9,3 +9,4 @@ mvc_project: __NAME__ #just the folder name, no .csproj extension
 test_project: __NAME__.Tests #just the folder name, no .csproj extension
 test_runner: ./packages/nspec.0.9.64/tools/NSpecRunner.exe
 iis_express: C:\Program Files (x86)\IIS Express
+database_name: __NAME__
